# BRIDGE-Discord-Bot

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTEXT.md  Dockerfile  EXCEL_INTEGRATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  Procfile  README.md  app.py  dashboard.py  nixpacks.toml  poll_feedback.csv  pyproject.toml  railway.json  requirements.txt  responses.xlsx  setup.py  wsgi.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_tour_feedback_and_coaches.py  0003_add_tour_google_fields.py
bridge_bot/: .env  INSTRUCTIONS.md  __init__.py  adapter.py  api.py  async_bridge.py  auth.py  bot.py  channel_cache.py  colab_integration.py  context.py  embeds.py  excel_manager.py  poll_orchestrator.py  poll_state.py  poll_view.py  rate_limiter.py  validators.py
bridge_bot/forms/: google_forms_client.py
bridge_bot/routes/: auth.py  poll_analytics.py  poll_create.py  poll_read.py  poll_votes.py  polls.py  tours.py
db/: __init__.py  coach_repository.py  enums.py  models.py  operations.py  poll_repository.py  repository.py  session.py  tour_repository.py
docs/: BRIDGE_BOT_INSTRUCTIONS.md  QUICKSTART.md  TECHNICAL_DOCUMENTATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  snowflake.test.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx  ProtectedRoute.tsx
frontend/src/hooks/: use-auth.tsx  use-polling.ts  use-theme.ts  use-theme.tsx
frontend/src/pages/: BotStatus.test.tsx  BotStatus.tsx  FeedbackForm.tsx  LiveControl.test.tsx  (+8 more)
scripts/: create_coach.py  migrate_from_excel.py  seed_test_data.py
static/css/: animations.css  style.css
static/js/: dashboard-api.js  dashboard.js  performance.js
templates/: dashboard.html  feedback_form.html  index.html  login.html
tests/: conftest.py  test_api.py  test_api_auth.py  test_api_business.py  test_bot_start.py  test_channel_cache.py  test_context_reference.py  test_models.py  test_operations.py  test_options_preflight.py  test_poll_view.py  test_stub_contract.py
(+6 files in other folders)
