[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bridge-2026"
version = "2.0.0"
description = "Bridge 2026 Discord bot with interactive polls and web dashboard"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.0.0",
    "python-dotenv>=0.19.0",
    "flask>=2.0.0",
    "requests>=2.26.0",
    "gunicorn>=20.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.28",
    "alembic>=1.12",
]

[project.urls]
Repository = "https://github.com/onlyycliff/BRIDGE-2026"

[tool.setuptools.packages.find]
include = ["bridge_bot*", "db*"]
